Changed padding and box shadow

--- a/cv.html
+++ b/cv.html
@@ -11,14 +11,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="inner">
     <h1>Resume</h1>
     <hr />
     <div class="container-fluid mt-3">
       <div class="row">
-        
+        <h3 class="only" ><u>Personal information <style> </style> </u></h3>
         <div class="col p-3 ">
           <ul>
-            <h3><u>Personal information</u></h3>
+            
             <li><a>Name: Gaurav Ghosh</a></li>
             <li><a>DOB: 26-03-1998</a></li>
             <li><a>Age: 24</a></li>
@@ -61,7 +62,7 @@
           <ul>
             <p><a><u>Institute</u></a></p>
             <li><a>Amity University Kolkata</a></li>
-            <li><a>St. Thomas's School for Boys</a></li>
+            <li><a>St. Thomas's School</a></li>
             <li><a>Assam Valley School</a></li>
           </ul>
         </div>
@@ -127,6 +128,7 @@
       <p>Seeking entry level position in a reputable organization with a strong corporate ethos, that welcomes innovation and offers growth opportunities to further my career with commensurate remuneration. I value discipline and hard work and approach all challenges with a proactive attitude. I am confident in evolving into a valuable asset for any prospective employer</p>
     </ul>
     <hr>
-    <a>June 22 <sup>nd</sup>, Kolkata </a>
+    <h6>June 22 <sup>nd</sup>, Kolkata </h6>
+  </div>
   </body>
 </html>
