--- a/cv.html
+++ b/cv.html
@@ -23,7 +23,7 @@
             <li><a>Name: Gaurav Ghosh</a></li>
             <li><a>DOB: 26-03-1998</a></li>
             <li><a>Age: 24</a></li>
-            <li><a>CAste : General</a></li>
+            <li><a>Caste : General</a></li>
             <li><a>Blood Type: O<sup>+ve</sup> </a></li>
             <li><a>Social Life: B<sup>-ve</sup> </a></li>
             <li><a>Martial Status: Un-married</a></li>
